Tue Jul 11 17:50:31 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* symtab.c: Use paddr_nz() to print addresses.

Tue Jul 11 12:52:31 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* value.h (read_register, read_signed_register): Change return
 	type to ULONGEST.
	(read_signed_register, read_signed_register_pid): Declare.

	* regcache.c (read_register, read_register_pid): Update.
	(read_signed_register_pid, read_signed_register): New functions.
	
Mon Jul 10 18:06:18 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* mips-tdep.c (mips_push_arguments): Always align struct_addr on a
 	16 byte boundary. Align allocated argument space using
 	MIPS_STACK_ARGSIZE.  Reserve space on stack for the struct return
 	and floating-point registers.  Use fp_register_arg_p to determine
 	if float_argreg should be aligned.

2000-07-10  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* config/sh/tm-sh.h (STORE_RETURN_VALUE): Redefine as
 	sh_store_return_value().
	* sh-tdep.c (sh_store_return_value): New function. Store the
 	value returned by a function into the appropriate register.

2000-07-10  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

        * sh-tdep.c (sh_skip_prologue): Before looking at the actual
 	instructions, try to see if the symbol table can be of help, by
 	calling after_prologue(). If this doesn't work, call
 	skip_prologue_hard_way().
	(skip_prologue_hard_way): Renamed from sh_skip_prologue. Add some
 	more instruction pattern matching for pushing of arguments, and
 	manipulation of r14.
	(after_prologue): New function. Use symbol table info to determine
 	the end of the prologue, if possible.

2000-07-07  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* findvar.c (_initialize_findvar, build_findvar, write_fp, read_fp,
	generic_target_write_fp, generic_target_read_fp, write_sp, read_sp,
	generic_target_write_sp, generic_target_read_sp, write_pc, read_pc,
	generic_target_write_pc, generic_target_read_pc, write_pc_pid, 